--- a/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj
+++ b/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Puissance4.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Puissance4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
