--- a/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj.filters
+++ b/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Main.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Puissance4.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Puissance4.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
