Ajout du BullAndCow Game

--- a/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj
+++ b/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BullAndCow.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Puissance4.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BullAndCow.h" />
     <ClInclude Include="Puissance4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
