--- a/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj.filters
+++ b/Puissance4CPP/Puissance4CPP/Puissance4CPP.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Puissance4.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="BullAndCow.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Puissance4.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="BullAndCow.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
